tests/NormalTests/paczka1/fuzzy1/87688662.err
Error in line 1: H6k6 S300 7,4
Error in line 7: LYhf6ybU S300 65,3
Error in line 17: H6k6 S303 25,6
Error in line 12: bRo S303 31,6
Error in line 21: H6k6 A317 45,7
